was-liberty-hello-world/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: was-sample-app-helm
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: was-sample-app-helm
spec:
  to:
    kind: Service
    name: was-sample-app-helm
    weight: 100
  port:
    targetPort: 9080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
